# quickshell

./: CMakeLists.txt  build_log.txt  cmake_output.txt
docs/: 0-system-prompt.md  1-quickshell-webview-patterns.md  2-qtwebengine-vs-qtwebview.md  3-eqsh-analysis.md  4-learnings-patch.md  5-first-implementation-report.md  6-future-theming.md  7-pr1-wip.md  8-pr1-completion-plan.md  9-pr1-notes.md  NEW-pr1-discussion.md  NEXT-PR-2-adjusted-scoping.md  NEXT-usage.md  NEXT-webchannel-considerations.md  build-in-public.md
docs/FUTURE/: 1-compositor-architecture.md  2-material-system-spec.md  3-material-engine-shaders.md  4-web-surface-contract.md  5-bridge-api-spec.md  6-region-materials.md  7-advanced-rendering-vision.md  8-roadmap.md  9-sequence.md  PREVIOUS-chatgpt-conv.md
docs/PR-2-materials/: MaterialRegionRenderer.qml  WebSurface.qml  materialnode.cpp  materialnode.hpp  materialsurface.cpp  materialsurface.hpp  shaders-material.frag  shaders-material.vert
src/: CMakeLists.txt
src/launch/: launch.cpp
src/webengine/: CMakeLists.txt  ShellChannel.qml  module.md  resources.qrc  shellbridge.cpp  shellbridge.hpp  shellwebengineview.cpp  shellwebengineview.hpp
src/webengine/test/manual/: panel.html  test.qml  webshell.js  widget.html
